--- a/style.css
+++ b/style.css
@@ -4,7 +4,43 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.container
+{
+    top: 0;
+    position: absolute;
+    width: 100%;
+    background-image: url('aa.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    line-height: 1.3;
+}
+h1{
+    text-align: center;
+    font-size: 50px;
+    margin-top: 20%;
+    color: white;
+}
+.btn{
+    text-align: center;
+    padding: 10px 20px;
+    background:none;
+    outline: none;
+    border: 1px solid white;
+    color: white;
+    border-radius: 25px;
+    margin-top: 10px;
+}
+.btn:hover{
+    background-color: rgba(0, 0, 0, 0.6);
+    transition: 0.6s;
+}
 .modal-container
 {
     background-color: rgba(0, 0, 0, 0.6);
